--- a/style.css
+++ b/style.css
@@ -106,6 +106,57 @@ li > a:hover {
     /* content starts from the bottom */;
 }
 
+/* customise .home for mobile */
+@media screen and (max-width: 1200px){
+    .home {
+        padding: 10rem 2rem 2rem 2rem;
+    }
+}
+
+#hamburger {
+    display: none;
+}
+
+/* customise .hamburger for mobile */
+@media screen and (max-width: 1200px){
+    #hamburger {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(-100%, 60%);
+        font-size: 1.8rem;
+        cursor: pointer;
+    }
+}
+
+
+/* customise navbar for mobile */
+@media screen and (max-width: 1200px){
+    .nav > ul > li {
+        display: block;
+        z-index: 40;
+        padding: 5px;
+        margin: 5px;
+    }
+    .nav {
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background-color: white;
+        left: 0;
+        font-size: 1.5rem;
+        z-index: 30;
+        text-align: center;
+        padding: 5rem 0;
+        top: -0.08vh;
+        display: none;
+    }
+    .nav.active {
+        display: block;
+    }
+}
+
 p {
     padding: 1rem 0;
 }
